
AC_INIT([glm], [0.1.0], [https://github.com/rioki/glm/issues])
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE([-Wall -Werror foreign subdir-objects])
AC_CANONICAL_HOST
AC_LANG([C++])
AC_PROG_CXX
AX_CXX_COMPILE_STDCXX_11
AM_PROG_AR
AM_SILENT_RULES([yes])
LT_INIT([shared static win32-dll])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
